--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -14,6 +14,10 @@
     float: left;
     padding: 10px;
 }
+ul li a{
+    text-decoration: none;
+    color: black;
+}
 .submit-area{
     width: 100%;
     display: flex;
@@ -32,4 +36,7 @@
 }
 .submit-area .form-control{
     width: 60%;
+}
+#homepage{
+    cursor: pointer;
 }
